--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Barbershop</title>
+	<title>Барбершоп «Бородинский»</title>
 </head>
 <body>
-	<header classs="main-header">
+	<header class="main-header">
 		<div class="container">
 			<nav class="main-navigation">
 				<ul>
@@ -38,7 +38,7 @@
 		<div class="index-logo">
 			<img src="img/index-logo.png" width="204" height="102" alt="Barbershop Borodinski">
 		</div>
-		<section clsss="features">
+		<section class="features">
 			<div class="features-item">
 				<b class="features-name">Быстро</b>
 				<p>Мы делаем свою работу работу! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>
@@ -77,6 +77,7 @@
 					<button class="btn gallery-next">Вперед</button>
 				</div>
 			</div>
+			</div>
 			<div class="index-content">
 				<div class="inex-content-left">
 					<h2 class="index-content-title">Контактная информация</h2>
@@ -90,7 +91,7 @@
 						Пн-Пт: с 10:00 до 22:00<br>
 						Сб-Вс: с 10:00 до 19:00
 					</p>
-					<a class="btn" href=#"">Как проехать</a>
+					<a class="btn" href="#">Как проехать</a>
 					<a class="btn" href="#">Обратная связь</a>
 				</div>
 				<div class="index-content-right">
@@ -123,6 +124,7 @@
 					<p>Разработано:</p>
 					<a class="btn" href="https://seagull6.com">seagull6.com</a>
 				</div>
+			</div>
 			</div>
 		</footer>
 	</body>
