--- a/item.html
+++ b/item.html
@@ -5,7 +5,7 @@
 	<title>Набор для путешествий «Baxter of California»</title>
 </head>
 <body>
-	<header classs="main-header">
+	<header class="main-header">
 		<div class="container">
 			<div class="logo-header">
 				<a href="index.html"><img src="img/barbershop-index/logo-header.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
@@ -53,7 +53,7 @@
 					<a href="#">Средства для ухода</a>
 				</li>
 				<li>
-					<span>Набор для путешествий «Baxter of California»</span>
+					<span class="current">Набор для путешествий «Baxter of California»</span>
 				</li>
 			</ul>
 		</div>
@@ -69,8 +69,8 @@
 			<p class="product-description">TRAVEL KIT - необходимый аксессуар во время любого путешествия, в аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажнющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 		</section>
 		<div class="product-price">
-      <span class="price-value">1800 грн.</span>
-      <a class="btn price-btn" href="#">Купить</a>
+			<span class="price-value">1800 грн.</span>
+			<a class="btn price-btn" href="#">Купить</a>
 		</div>
 		<section class="product-set">
 			<h3 class="item-content-title">В набор входят:</h3>
@@ -84,23 +84,24 @@
 		</section>
 	</main>
 	<footer class="main-footer">
-			<div class="container">
-				<div class="footer-contacts">
-					<p>Барбершоп «Бородинский»<br>
-						Адрес: г. Киев, ул. Гайдара, д. 24/5<br>
-						<a href="#">Как нас найти?</a>
-						Телефон: +3 (067) 734-43-09</p>
-				<div class="footer-social">
-					<p>Давайте дружить!</p>
-					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-					<a class="social-btn social-btn-fb" href="#">Facebook</a>
-					<a class="social-btn social-btn-inst" href="#">Instagram</a>
-				</div>
-				<div class="footer-copyright">
-					<p>Разработано:</p>
-					<a class="btn" href="https://seagull6.com">seagull6.com</a>
+		<div class="container">
+			<div class="footer-contacts">
+				<p>Барбершоп «Бородинский»<br>
+					Адрес: г. Киев, ул. Гайдара, д. 24/5<br>
+					<a href="#">Как нас найти?</a>
+					Телефон: +3 (067) 734-43-09</p>
+					<div class="footer-social">
+						<p>Давайте дружить!</p>
+						<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+						<a class="social-btn social-btn-fb" href="#">Facebook</a>
+						<a class="social-btn social-btn-inst" href="#">Instagram</a>
+					</div>
+					<div class="footer-copyright">
+						<p>Разработано:</p>
+						<a class="btn" href="https://seagull6.com">seagull6.com</a>
+					</div>
 				</div>
 			</div>
 		</footer>
-</body>
-</html>
+	</body>
+	</html>
