--- a/shop.html
+++ b/shop.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Барбершоп «Бородинский»</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body> 
+<body class="inner-page"> 
 	<header class="main-header">
-		<div class="container">
+		<div class="container clearfix">
 			<nav class="main-navigation">
+			<a class="logo-inner" href="index.html"><img src="img/Logo.png" width="111" height="24" alt="Барбершоп «Бородинский»"></a>
 				<ul>
-					<li>
-						<a href="#">Главная</a>
-					</li>
 					<li>
 						<a href="#">Информация</a>
 					</li>
@@ -19,10 +20,10 @@
 						<a href="#">Новости</a>
 					</li>
 					<li>
-						<a href="#">Прайс-лист</a>
+						<a href="price.html">Прайс-лист</a>
 					</li>
-					<li>
-						<a href="#">Магазин</a>
+					<li class="active">
+						<span>Магазин</span>
 					</li>
 					<li>
 						<a href="#">Контакты</a>
@@ -34,191 +35,210 @@
 			</div>
 		</div>
 	</header>
-	<main class="conatainer">
-		<div class="page-title">
-			<h1>Средство для ухода</h1>
-		</div>
-		<div class="breadcrumbs">
-			<ul>
+	<main class="container clearfix">
+		<div class="inner-page-title">
+			<h1>Средства для ухода</h1>
+			<ul class="breadcrumbs">
 				<li>
-					<a href="index.html">Гдавная</a>
+					<a href="index.html">Главная</a>
 				</li>
 				<li>
-					<a href="#">Магазин</a>
+					<a href="shop.html">Магазин</a>
 				</li>
-				<li>
-					<span class="current">Средства для ухода</span>
-				</li>
+				<li class="current">Средства для ухода</li>
 			</ul>
 		</div>
-		<form action="#" method="post">
-			<fieldset class="selection">
-				<legend class="selection-name">Производители:</legend>
-				<ul>
-					<li>
-						<input id="cfirst" type="checkbox" name="first"/>
-						<label for="cfirst">Baxter of California</label>
-					</li>
-					<li>
-						<input id="csecond" type="checkbox" name="Mr Natty"/>
-						<label for="csecond">Mr Natty</label>
-					</li>
-					<li>
-						<input id="cthird" type="checkbox" name="Suavecito"/>
-						<label for="cthird">Suavecito</label>
-					</li>
-					<li>
-						<input id="cfourth" type="checkbox" name="Malin+Goetz"/>
-						<label for="cfourth">Malin+Goetz</label>
-					</li>
-					<li>
-						<input id="cfifth" type="checkbox" name="Murray's"/>
-						<label for="cfifth">Murray's</label>
-					</li>
-					<li>
-						<input id="csixth" type="checkbox" name="American crew"/>
-						<label for="csixth">American crew</label>
-					</li>
-				</ul>
-			</fieldset>
-			<fieldset class="selection">
-				<legend class="selection-name">Групы товаров:</legend>
-				<ul>
-					<li>
-						<input id="radio1" type="radio" name="product-groups" value="g1">
-						<label for="radio1">Бритвенные принадлежности</label>
-					</li>
-					<li>
-						<input id="radio2" type="radio" name="product-groups" value="g2">
-						<label for="radio2">Средства для ухода</label>
-					</li>
-					<li>
-						<input id="radio3" type="radio" name="product-groups" value="g3">
-						<label for="radio3">Аксессуары</label>
-					</li>
-				</ul>
-			</fieldset>
-			<button class="btn" type="submit">Показать</button>
-		</form>
-		<div class="catalog">
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="Baxter of California"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Набор для путешествий</span><br>
-						<span class="title">«Baxter of California»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">1800 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
+		<div class="inner-content">
+			<form class="selection-form" action="#" method="post">
+				<fieldset>
+					<legend>Производители:</legend>
+					<ul>
+						<li>
+							<input id="cfirst" type="checkbox" name="first" checked disabled/>
+							<label for="cfirst">Baxter of California</label>
+						</li>
+						<li>
+							<input id="csecond" type="checkbox" name="Mr Natty"/>
+							<label for="csecond">Mr Natty</label>
+						</li>
+						<li>
+							<input id="cthird" type="checkbox" name="Suavecito"/>
+							<label for="cthird">Suavecito</label>
+						</li>
+						<li>
+							<input id="cfourth" type="checkbox" name="Malin+Goetz" />
+							<label for="cfourth">Malin+Goetz</label>
+						</li>
+						<li>
+							<input id="cfifth" type="checkbox" name="Murray's"/>
+							<label for="cfifth">Murray's</label>
+						</li>
+						<li>
+							<input id="csixth" type="checkbox" name="American crew"/>
+							<label for="csixth">American crew</label>
+						</li>
+					</ul>
+				</fieldset>
+				<fieldset>
+					<legend>Группы товаров:</legend>
+					<ul>
+						<li>
+							<input id="radio1" type="radio" name="product-groups" value="g1" disabled>
+							<label for="radio1">Бритвенные принадлежности</label>
+						</li>
+						<li>
+							<input id="radio2" type="radio" name="product-groups" value="g2">
+							<label for="radio2">Средства для ухода</label>
+						</li>
+						<li>
+							<input id="radio3" type="radio" name="product-groups" value="g3">
+							<label for="radio3">Аксессуары</label>
+						</li>
+					</ul>
+				</fieldset>
+				<button class="btn" type="submit">Показать</button>
+			</form>
+			<div class="products">
+				<article class="product">
+					<div class="product-img">
+						<img src="img/1.jpg" alt="Baxter of California"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Набор для путешествий</span><br>
+							<span class="title">«Baxter of California»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">1800 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="product">
+					<div class="product-img">
+						<img src="img/2.jpg" alt="Baxter of California"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Увлажняющий кондиционер</span><br>
+							<span class="title">«Baxter of California»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">375 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="product">
+					<div class="product-img">
+						<img src="img/3.jpg" alt="Suavecito"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Гель для волос</span><br>
+							<span class="title">«Suavecito»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">150 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="product">
+					<div class="product-img">
+						<img src="img/4.jpg" alt="American crew"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Глина для укладки волос</span><br>
+							<span class="title">«American crew»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">250 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="product">
+					<div class="product-img">
+						<img src="img/5.png" alt="American crew"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Гель для волос</span><br>
+							<span class="title">«American crew»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">150 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="product">
+					<div class="product-img">
+						<img src="img/6.jpg" alt="Baxter of California"  width="220" height="165">
+					</div>
+					<div class="product-title">
+						<a href="#">
+							<span class="category">Набор для бритья</span><br>
+							<span class="title">«Baxter of California»</span>
+						</a>
+					</div>
+					<div class="product-price">
+						<span class="price-value">1900 грн.</span>
+						<a class="btn price-btn" href="#">Купить</a>
+					</div>
+				</article>
 			</div>
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="Baxter of California"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Увлажняющий кондиционер</span><br>
-						<span class="title">«Baxter of California»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">375 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
+			<div class="pagination">
+				<a class="btn" href="#">1</a>
+				<a class="btn active-pgn" href="#">2</a>
+				<a class="btn" href="#">3</a>
+				<a class="btn" href="#">4</a>
 			</div>
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="Suavecito"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Гель для волос</span><br>
-						<span class="title">«Suavecito»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">150 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
-			</div>
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="American crew"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Глина для укладки волос</span><br>
-						<span class="title">«American crew»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">250 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
-			</div>
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="American crew"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Гель для волос</span><br>
-						<span class="title">«American crew»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">150 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
-			</div>
-			<div class="shop-item">
-				<div class="shop-img">
-					<img src="#" alt="Baxter of California"  width="220" height="165">
-				</div>
-				<div class="catalog-title">
-					<a href="#">
-						<span class="category">Набор для бритья</span><br>
-						<span class="title">«Baxter of California»</span>
-					</a>
-				</div>
-				<div class="product-price">
-					<span class="price-value">1900 грн.</span>
-					<a class="btn price-btn" href="#">Купить</a>
-				</div>
-			</div>
-		</div>
-		<div class="paginator">
-			<a href="#">1</a>
-			<a class="active" href="#">2</a>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">&raquo;</a>
 		</div>
 	</main>
-	<footer class="main-footer">
+	<footer class="main-footer clearfix">
 		<div class="container">
 			<div class="footer-contacts">
 				<p>Барбершоп «Бородинский»<br>
 					Адрес: г. Киев, ул. Гайдара, д. 24/5<br>
-					<a href="#">Как нас найти?</a>
+					<a href="#" class="js-open-map-footer">Как нас найти?</a><br>
 					Телефон: +3 (067) 734-43-09</p>
-					<div class="footer-social">
-						<p>Давайте дружить!</p>
-						<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-						<a class="social-btn social-btn-fb" href="#">Facebook</a>
-						<a class="social-btn social-btn-inst" href="#">Instagram</a>
-					</div>
-					<div class="footer-copyright">
-						<p>Разработано:</p>
-						<a class="btn" href="https://seagull6.com">seagull6.com</a>
-					</div>
+				</div>
+				<div class="footer-social">
+					<p>Давайте дружить!</p>
+					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+					<a class="social-btn social-btn-fb" href="#">Facebook</a>
+					<a class="social-btn social-btn-inst" href="#">Instagram</a>
+				</div>
+				<div class="footer-copyright">
+					<p>Разработано:</p>
+					<a class="btn" href="https://seagull6.com">seagull6.com</a>
 				</div>
 			</div>
 		</footer>
+		<div class="modal-content">
+			<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+			<h2 class="modal-content-title">Личный кабинет</h2>
+			<p>Введите свой логин и пароль</p>
+			<form class="login-form" action="#" method="post">
+				<input class="icon-user" type="text" name="login" placeholder="Логин">
+				<input class="icon-password" type="password" name="password" placeholder="Пароль">
+				<label class="login-checkbox">
+					<input type="checkbox" name="remember">
+					<span class="checkbox-indicator"></span>
+					Запомните меня 
+				</label>
+				<a class="restore" href="#">Я забыл пароль!</a>
+				<button class="btn" type="submit">Войти</button>
+			</form>
+		</div>
+		<div class="modal-content-map">
+			<button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.1032213318535!2d30.495070315731184!3d50.439177979473925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef1eec696e3%3A0x38a418f5507aa73e!2z0LLRg9C70LjRhtGPINCT0LDQudC00LDRgNCwLCA1LCDQmtC40ZfQsg!5e0!3m2!1sru!2sua!4v1500497682839" width="766" height="561" style="border:0" allowfullscreen></iframe>
+		</div>
+		<div class="modal-overlay"></div>
+		<script src="js/scripts.js"></script>
 	</body>
 	</html>
